front/src/scenes/Dashboard/components/Navbar/index.css
:local .container {
  font-size: 18px;
  margin-right: unset;
  background-color: #f5f5f5;
  border-bottom: 2px #e4e4e4 solid;
}

:local .container input {
  background: unset;
  border: none;
  border-left: 1px solid lightgray;
  border-bottom: none;
  border-right: none;
}

:local .breadcrumb {
  margin-bottom: 0;
  display: flex;
  align-items: flex-end;
}

:local .breadcrumb > li + li::before {
  padding: 0 2px;
}

:local .splitButton button:active,
.splitButton button:focus,
.splitButton button:hover {
  color: #23527c !important;
  background: transparent !important;
}

:local .splitButton button:active,
.splitButton button:focus {
  outline: none !important;
  box-shadow: none !important;
}

:local .splitButton button {
  background: transparent !important;
  border: none;
  color: #ff3435;
  font-size: 18px;
  font-weight: bold;
  box-shadow: none !important;
  text-transform: capitalize;
  padding: 0;
}

:local .splitButton button:nth-child(2) {
  padding-right: 0.5rem !important;
  padding-left: 1rem !important;
  top: -0.1rem !important;
}

:local .splitButton ul {
  font-size: 18px !important;
  padding: 0;
  text-transform: capitalize;
  min-width: auto;
}

:local .splitButton ul a {
  padding: 0.6rem 3rem 0.6rem 1.8rem;
}

@media (min-width: 768px) {
  .container {
    margin-left: 210px;
    position: sticky;
    top: 0px;
    z-index: 4;
  }
}

